--- a/views/index.html
+++ b/views/index.html
@@ -19,12 +19,12 @@
     <h2>or</h2>
     <h1>Register</h1>
     <form action="/auth/register" method="POST">
-        <label for="displayName">Display Name:</label>
-        <input type="text" id="displayName" name="displayName" required><br>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br>
+        <label for="confirmPassword">Confirm Password:</label>
+        <input type="confirmPassword" id="confirmPassword" name="confirmPassword" required><br>
         <button type="submit">Register</button>
     </form>
 </body>
