--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,18 @@
         <input type="confirmPassword" id="confirmPassword" name="confirmPassword" required><br>
         <button type="submit">Register</button>
     </form>
+
+
+    <h1>Reset Password</h1>
+    <form action="/auth/reset-password" method="POST">
+        <label for="oldPassword">Old Password:</label>
+        <input type="password" id="oldPassword" name="oldPassword" required><br>
+        <label for="newPassword">New Password:</label>
+        <input type="password" id="newPassword" name="newPassword" required><br>
+        <label for="confirmNewPassword">Confirm New Password:</label>
+        <input type="password" id="confirmNewPassword" name="confirmNewPassword" required><br>
+        <button type="submit">Reset Password</button>
+    </form>
 </body>
 
 </html>
