feat: add dashBoard api

--- a/views/index.html
+++ b/views/index.html
@@ -39,6 +39,8 @@
         <input type="password" id="confirmNewPassword" name="confirmNewPassword" required><br>
         <button type="submit">Reset Password</button>
     </form>
+    <h1>User Database Dashboard</h1>
+    <a href="/dashboard">View User Dashboard</a>
 </body>
 
 </html>
